--- a/dunewiki/index.html
+++ b/dunewiki/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    
   <title>Dune by Frank Herbert</title>
   <style>
     /* Add a black background color to the top navigation */
@@ -45,6 +44,12 @@
       font-size: 22px;
     }
 
+    /* Center the image */
+    .content img {
+      display: block;
+      margin: 0 auto;
+    }
+
     /* When the screen is less than 800 pixels wide */
     @media screen and (max-width: 800px) {
       /* Hide all links, except for the selected tab */
@@ -81,28 +86,6 @@
       }
     }
   </style>
-  <script>
-    // Get the element with the class "icon"
-    let icon = document.querySelector(".icon");
-
-    // Add an event listener for the 'click' event on the icon element
-    icon.addEventListener('click', responsiveControl);
-
-    // Function to control the responsiveness of the navigation bar
-    function responsiveControl() {
-      // Get the element with the id "myTopnav"
-      let x = document.getElementById("myTopnav");
-
-      // Check if the class name of the element is "topnav"
-      if (x.classList.contains("topnav")) {
-        // If it is, add the "responsive" class to the element
-        x.classList.add("responsive");
-      } else {
-        // If it's not, remove the "responsive" class from the element
-        x.classList.remove("responsive");
-      }
-    }
-  </script>
 </head>
 
 <body>
@@ -130,8 +113,6 @@
     <p><em>“Dune”</em> by <em>Frank Herbert</em> is a classic science fiction novel set in a distant future.</p>
     <p>This is the cover for the novel by Penguin Random House</p>
     <img src="img/DuneCover.jpg">
-
-
 
   </div>
   <!-- Including the main.js file for JavaScript functionality -->
