--- a/dunewiki/section3.html
+++ b/dunewiki/section3.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>Additional Information</title>
 
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
 
     <!-- Including the Font Awesome CSS library for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+          <!-- Including the main.js file for JavaScript functionality -->
+          <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -17,11 +19,11 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Abstract</a>
-        <a href="section1.html">Section 1</a>
-        <a href="section2.html">Section 2</a>
+        <a href="section1.html">Background for Dune</a>
+        <a href="section2.html">Themes and Ideas</a>
 
         <!-- Active link pointing to the section3.html page -->
-        <a class="active" href="section3.html">Section 3</a>
+        <a class="active" href="section3.html">Additional Information</a>
 
         <a href="see_also.html">See Also</a>
         <a href="references.html">References</a>
