--- a/dunewiki/see_also.html
+++ b/dunewiki/see_also.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>See Also</title>
 
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
 
     <!-- Including the Font Awesome CSS library for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+          <!-- Including the main.js file for JavaScript functionality -->
+          <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -20,11 +22,10 @@
 
         <!-- Active link pointing to the section1.html page -->
         <a class="active" href="see_also.html">See Also</a>
-        
-        <a href="section1.html">Section 1</a>
-        <a href="section2.html">Section 2</a>
-        <a href="section3.html">Section 3</a>
-        <a href="see_also.html">See Also</a>
+
+        <a href="section1.html">Background for Dune</a>
+        <a href="section2.html">Themes and Ideas</a>
+        <a href="section3.html">Additional Information</a>
         <a href="references.html">References</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
@@ -36,7 +37,6 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 1 content -->
-        <section id="section1">
             <h3>See also</h3>
             <ul>
                 <li><a href="https://dunenovels.com/">Dune Official Website</a></li>
