--- a/dunewiki/index.html
+++ b/dunewiki/index.html
@@ -109,11 +109,12 @@
     </a>
   </div>
   <div class="content">
-    <h1>Dune by Frank Herbert</h1>
-    <p><em>“Dune”</em> by <em>Frank Herbert</em> is a classic science fiction novel set in a distant future.</p>
-    <p>This is the cover for the novel by Penguin Random House</p>
+    <body>
+      <h1>Abstract</h1>
+      <p>"<strong>Dune</strong>" is a seminal <em>science fiction</em> novel written by <strong>Frank Herbert</strong>. It was published in 1965 after facing numerous rejections and has since become a landmark work in the genre. The novel is set in a complex universe and explores various <em>themes and ideologies</em>, including <em>ecology</em>, <em>power politics</em>, <em>religion</em>, and <em>human potential</em>. Frank Herbert's rich <em>world-building</em> is evident in the creation of unique words and concepts, which are defined in a comprehensive <em>glossary</em>. "<strong>Dune</strong>" has had a significant impact on science fiction, influencing future authors and works. It has received critical acclaim, winning prestigious awards such as the <strong>Hugo Award</strong> and the <strong>Nebula Award</strong>. "<strong>Dune</strong>" has been adapted into various forms of media, including a 1984 film directed by <strong>David Lynch</strong> and a 2021 film directed by <strong>Denis Villeneuve</strong>. Additional resources such as the official websites, <strong>IMDb</strong> pages, and <strong>Goodreads</strong> provide further information and insights into the world of "<strong>Dune</strong>" and the life and works of <strong>Frank Herbert</strong>.</p>
+    </body>
     <img src="img/DuneCover.jpg">
-
+    
   </div>
   <!-- Including the main.js file for JavaScript functionality -->
   <script src="js/main.js"></script>
