--- a/dunewiki/references.html
+++ b/dunewiki/references.html
@@ -38,12 +38,18 @@
       <div class="content">
           <!-- Section 1 content -->
           <section id="section1">
-              <h2>References</h2>
-              <ol>
-                <li><a href="https://en.wikipedia.org/wiki/Dune_(novel)">Wikipedia page for Dune (novel)</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Dune_(2021_film)">Wikipedia page for Dune (2021 film)</a></li>
-                <li><a href="https://www.sparknotes.com/lit/dune/context/">Sparknotes for Dune (novel)</a></li>
-              </ol>
+              <body>
+                <h1>References</h1>
+                <ol>
+                  <li>"Dune" by Frank Herbert. Retrieved from <a href="https://www.frankherbert.org/">https://www.frankherbert.org/</a></li>
+                  <li>Dune Novels Official Website. Retrieved from <a href="https://dunenovels.com/">https://dunenovels.com/</a></li>
+                  <li>"Dune" (1984) IMDb Page. Retrieved from <a href="https://www.imdb.com/title/tt0087182/">https://www.imdb.com/title/tt0087182/</a></li>
+                  <li>"Dune" (2021) IMDb Page. Retrieved from <a href="https://www.imdb.com/title/tt1160419/">https://www.imdb.com/title/tt1160419/</a></li>
+                  <li>"Dune" on Goodreads. Retrieved from <a href="https://www.goodreads.com/book/show/44767458-dune">https://www.goodreads.com/book/show/44767458-dune</a></li>
+                  <li>Frank Herbert on Wikipedia. Retrieved from <a href="https://en.wikipedia.org/wiki/Frank_Herbert">https://en.wikipedia.org/wiki/Frank_Herbert</a></li>
+                  <li>"Dune" (novel) on Wikipedia. Retrieved from <a href="https://en.wikipedia.org/wiki/Dune_(novel)">https://en.wikipedia.org/wiki/Dune_(novel)</a></li>
+                </ol>
+              </body>
           </section>
       </div>
   
