--- a/dunewiki/see_also.html
+++ b/dunewiki/see_also.html
@@ -37,12 +37,17 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 1 content -->
-            <h3>See also</h3>
-            <ul>
-                <li><a href="https://dunenovels.com/">Dune Official Website</a></li>
-                <li><a href="https://www.dunemovie.com/">Dune (film)</a></li>
-                <li><a href="https://www.amazon.com/Dune-Frank-Herbert/dp/0441172717">Dune novel on Amazon</a></li>
-            </ul>
+            <h1>See Also</h1>
+                <ul>
+                  <li><a href="https://www.frankherbert.org/">Frank Herbert Official Website</a>: Visit the official website dedicated to Frank Herbert, the author of "Dune," to explore more about his life, works, and literary contributions.</li>
+                  <li><a href="https://dunenovels.com/">Dune Novels Official Website</a>: Dive deeper into the expansive Dune universe with official novels, spin-offs, and related content that expands on the story and characters.</li>
+                  <li><a href="https://www.imdb.com/title/tt0087182/">Dune (1984) IMDb Page</a>: Check out the IMDb page for the 1984 film adaptation of "Dune" directed by David Lynch. Get information about the cast, crew, and see user reviews and ratings.</li>
+                  <li><a href="https://www.imdb.com/title/tt1160419/">Dune (2021) IMDb Page</a>: Explore the IMDb page for the 2021 film adaptation of "Dune" directed by Denis Villeneuve. Find details about the cast, crew, and see user reviews and ratings.</li>
+                  <li><a href="https://www.goodreads.com/book/show/44767458-dune">Dune on Goodreads</a>: Discover what other readers have to say about "Dune" on Goodreads. Read reviews, join discussions, and find recommendations for similar books.</li>
+                  <li><a href="https://en.wikipedia.org/wiki/Frank_Herbert">Frank Herbert on Wikipedia</a>: Learn more about the life and works of Frank Herbert, the acclaimed author of "Dune," on his Wikipedia page.</li>
+                  <li><a href="https://en.wikipedia.org/wiki/Dune_(novel)">Dune (novel) on Wikipedia</a>: Get in-depth information about the novel "Dune" on its Wikipedia page. Explore plot summaries, analysis, and historical context.</li>
+                </ul>
+              </body>
         </section>
     </div>
 
